--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </div>
                     </li>
                 </ul>
-                <div class="imagem">
+                <div class="image">
                     <button class="play">
                         <img src="img/trail_man.jpg" alt="" class="img">
                         <div class="player">
@@ -103,5 +103,58 @@
             </div>
         </div>
     </section>
+
+    <section class="estrutura">
+        <div class="container">
+            <div class="content">
+                <div class="top">
+                    <div class="title">Avance na sua carreira</div>
+                    <h2>Estrutura criada para você iniciar e avançar profissionalmente</h2>
+                </div>
+                <div class="items">
+                    <div class="items-top">
+                        <ul>
+                            <li>
+                                <img src="img/icons/icon_infinite.svg" alt="">
+                                <p>Acesso vitalício</p>
+                            </li>
+                            <li>
+                                <img src="img/icons/icon_update.svg" alt="">
+                                <p>Atualizações<br>constantes</p>
+                            </li>
+                            <li>
+                                <img src="img/icons/icon_classes.svg" alt="">
+                                <p>Aulas e lives<br>gravadas</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="items-bottom">
+                        <ul>
+                            <li>
+                                <img src="img/icons/icon_mentorships.svg" alt="">
+                                <p>Mentorias</p>
+                            </li>
+                            <li>
+                                <img src="img/icons/icon_projects.svg" alt="">
+                                <p>Projetos práticos</p>
+                            </li>
+                            <li>
+                                <img src="img/icons/icon_certification.svg" alt="">
+                                <p>Certificação</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="whatsapp">
+                    <img src="img/icons/icon_whatsapp.svg" alt="">
+                    <p><a href="">Você tem  alguma dúvida?</a> Fale com a nossa equipe pelo Whatsapp</p>
+                </div>
+            </div>
+            <div class="image">
+                <img src="img/structure_man.png" alt="">
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
