update s-praQeum, s-mercado

--- a/index.html
+++ b/index.html
@@ -155,6 +155,74 @@
             </div>
         </div>
     </section>
+
+    <section class="praQuem">
+        <div class="container">
+            <div class="top">
+                <div class="title">Principais vantagens de</div>
+                <h2>Pra quem é esse curso?</h2>
+            </div>
+            <div class="bottom">
+                <ul>
+                    <li>
+                        <div class="icon"><img src="img/icons/icon_professional.svg" alt=""></div>
+                        <p>Se você é um profissional de qualquer área que deseja explorar novas oportunidades de carreira, a programação pode ser a escolha certa. Mesmo sem experiência prévia em programação, você pode migrar para esta área e desfrutar de mais liberdade, realização e retorno financeiro.</p>
+                    </li>
+                    <li>
+                        <div class="icon"><img src="img/icons/icon_initial.svg" alt=""></div>
+                        <p>Se você é iniciante ou já fez alguns cursos de programação, mas ainda não se sente preparado para executar projetos completos e está inseguro em relação ao mercado de trabalho, você está no lugar certo.</p>
+                    </li>
+                    <li>
+                        <div class="icon"><img src="img/icons/icon_work.svg" alt=""></div>
+                        <p>Se você já trabalha como programador e deseja se especializar ainda mais para impulsionar sua carreira e aumentar seus salários, a Devboost é a escolha certa para você.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="mercado">
+        <div class="container">
+            <div class="top">
+                <div class="text">
+                    <div class="title"><img src="img/icons/icon_rocket.png" alt="">Mercado em alta</div>
+                    <h2>Entre na área mais promissora da atualidade, que está em constante expansão com novas oportunidades surgindo a cada dia.</h2>
+                    <button class="btn">Garantir minha vaga</button>
+                </div>
+                <p>Se você procura por uma carreira promissora e cheia de oportunidades, junte-se a um dos nichos mais aquecidos do mercado, com possibilidades surgindo a todo momento. E para isso a Devboost oferece um ambiente de aprendizado imersivo, orientado por especialistas no assunto, para prepará-lo para essas oportunidades. Venha fazer parte da Devboost e comece sua jornada para se tornar um programador de destaque.</p>
+            </div>
+            <div class="bottom">
+                <div class="text">
+                    <p>Ganhe ótimos salários trabalhando como dev</p>
+                    <p>* valores com base no site glassdoor.com.br</p>
+                </div>
+                <div class="items">
+                    <div class="card">
+                        <div class="niveis">
+                            <h3>Junior</h3>
+                            <p>Iniciante na área, até 1 ano de experiência</p>
+                        </div>
+                        <div class="salario">2-4k</div>
+                    </div>
+                    <div class="card">
+                        <div class="niveis">
+                            <h3>Pleno</h3>
+                            <p>Atua há algum tempo no mercado</p>
+                        </div>
+                        <div class="salario">6-8k</div>
+                    </div>
+                    <div class="card">
+                        <div class="niveis">
+                            <h3>Sênior</h3>
+                            <p>Profissional com muita experiência</p>
+                        </div>
+                        <div class="salario">8-12k</div>
+                    </div>
+                </div>
+            </div>
+            <div class="line"></div>
+        </div>
+    </section>
     
 </body>
 </html>
