update s-metodologia, s-depoimentos, s-grade

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <h1>Dê start na sua jornada profissional e faça sua carreira evoluir na programação</h1>
                 <p>Trilha de conhecimento completa, focada em atender as diferentes demandas do mercado.</p>
-                <button class="btn">Garantir minha vaga</button>
+                <a href="#"><button class="btn">Garantir minha vaga</button></a>
             </div>
         </div>
     </section>
@@ -187,7 +187,7 @@
                 <div class="text">
                     <div class="title"><img src="img/icons/icon_rocket.png" alt="">Mercado em alta</div>
                     <h2>Entre na área mais promissora da atualidade, que está em constante expansão com novas oportunidades surgindo a cada dia.</h2>
-                    <button class="btn">Garantir minha vaga</button>
+                    <a href="#"><button class="btn">Garantir minha vaga</button></a>
                 </div>
                 <p>Se você procura por uma carreira promissora e cheia de oportunidades, junte-se a um dos nichos mais aquecidos do mercado, com possibilidades surgindo a todo momento. E para isso a Devboost oferece um ambiente de aprendizado imersivo, orientado por especialistas no assunto, para prepará-lo para essas oportunidades. Venha fazer parte da Devboost e comece sua jornada para se tornar um programador de destaque.</p>
             </div>
@@ -223,6 +223,141 @@
             <div class="line"></div>
         </div>
     </section>
+
+    <section class="metodologia">
+        <div class="container">
+            <div class="content-left">
+                <div class="title">Metodologia</div>
+                <h2>Aprendemos melhor fazendo</h2>
+                <p>A Devboost adota uma metodologia de aprendizado altamente prática e voltada para ação.</p>
+                <a href="#"><button class="btn">Garantir minha vaga</button></a>
+            </div>
+            <div class="content-right">
+                <ul>
+                    <li>
+                        <div class="icon"><img src="img/icons/icon_learn.svg" alt=""></div>
+                        <div class="text">
+                            <h5>Aprenda</h5>
+                            <p>No primeiro pilar, Aprenda, os alunos terão acesso a uma ampla variedade de conteúdos em vídeo e dicas de leitura.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon"><img src="img/icons/icon_convenient.svg" alt=""></div>
+                        <div class="text">
+                            <h5>Pratique</h5>
+                            <p>No segundo pilar, Pratique com Desafios, os alunos serão desafiados a aplicar seus conhecimentos em projetos práticos e desafios reais.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon"><img src="img/icons/icon_understand.svg" alt=""></div>
+                        <div class="text">
+                            <h5>Compreenda</h5>
+                            <p>No terceiro pilar, Compreenda, os alunos terão a oportunidade de explorar os conceitos mais complexos que só são possíveis com a prática e desenvolver uma compreensão mais profunda de como as coisas funcionam.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon"><img src="img/icons/icon_explain.svg" alt=""></div>
+                        <div class="text">
+                            <h5>Explique</h5>
+                            <p>Finalmente, no quarto pilar, Explique, os alunos serão incentivados a compartilhar seus conhecimentos e ajudar os outros a aprender.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="depoimentos">
+        <div class="container">
+            <div class="top">
+                <div class="title">Depoimentos</div>
+                <h2>O que falam nossos alunos</h2>
+            </div>
+            <div class="items">
+                <div class="card">
+                    <img src="img/icons/icon_quotes.svg" alt="" class="icon">
+                    <p>Lorem ipsum dolor sit amet consectetur. Amet ac viverra tortor ut a potenti faucibus in. Sed morbi et massa faucibus. In condimentum nisl tincidunt morbi cras amet sit a. Orci sit mattis at nulla est. Posuere amet amet pellentesque laoreet enim sed sed.</p>
+                    <h5>Alice Costa</h5>
+                    <p>Desenvolvedora <span>Front-end na Stone</span></p>
+                </div>
+                <div class="card">
+                    <img src="img/icons/icon_quotes.svg" alt="" class="icon">
+                    <p>Lorem ipsum dolor sit amet consectetur. Amet ac viverra tortor ut a potenti faucibus in. Sed morbi et massa faucibus. In condimentum nisl tincidunt morbi cras amet sit a. Orci sit mattis at nulla est. Posuere amet amet pellentesque laoreet enim sed sed.</p>
+                    <h5>Alice Costa</h5>
+                    <p>Desenvolvedora <span>Front-end na Stone</span></p>
+                </div>
+                <div class="card">
+                    <img src="img/icons/icon_quotes.svg" alt="" class="icon">
+                    <p>Lorem ipsum dolor sit amet consectetur. Amet ac viverra tortor ut a potenti faucibus in. Sed morbi et massa faucibus. In condimentum nisl tincidunt morbi cras amet sit a. Orci sit mattis at nulla est. Posuere amet amet pellentesque laoreet enim sed sed.</p>
+                    <h5>Alice Costa</h5>
+                    <p>Desenvolvedora <span>Front-end na Stone</span></p>
+                </div>
+            </div>
+        </div>
+    </section>
     
+    <section class="grade">
+        <div class="container">
+            <div class="content-left">
+                <div class="text">
+                    <div class="title">Grade</div>
+                    <h2>Explore os módulos do Treinamento</h2>
+                    <p>Nosso treinamento possui módulos completos e aprofundados sobre programação. São mais de 150 aulas repletas de conteúdo de qualidade, ministradas por especialistas no assunto.</p>
+                </div>
+                <ul>
+                    <li>
+                        <img src="img/icons/icon_community.svg" alt="">
+                        <h6>Comunidade</h6>
+                        <p>Tire suas dúvidas com os professores e também com outros alunos experientes.</p>
+                    </li>
+                    <li>
+                        <img src="img/icons/icon_lifetime.svg" alt="">
+                        <h6>Acesso vitalício</h6>
+                        <p>Tenha acesso a todas as atualizações e não pague nada a mais por isso.</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="content-right">
+                <details>
+                    <summary>
+                        <h5>Módulo 01 - Introdução</h5>
+                        <img src="img/icons/icon_arrow.svg" alt="">
+                    </summary>
+                    <ul>
+                        <li>Aula 01 - Introdução</li>
+                        <li>Aula 02 - Seletores</li>
+                        <li>Aula 03 - Propriedades de texto</li>
+                        <li>Aula 04 - Box Model</li>
+                    </ul>
+                </details>
+
+                <details>
+                    <summary>
+                        <h5>Módulo 01 - Introdução</h5>
+                        <img src="img/icons/icon_arrow.svg" alt="">
+                    </summary>
+                    <ul>
+                        <li>Aula 01 - Introdução</li>
+                        <li>Aula 02 - Seletores</li>
+                        <li>Aula 03 - Propriedades de texto</li>
+                        <li>Aula 04 - Box Model</li>
+                    </ul>
+                </details>
+                
+                <details>
+                    <summary>
+                        <h5>Módulo 01 - Introdução</h5>
+                        <img src="img/icons/icon_arrow.svg" alt="">
+                    </summary>
+                    <ul>
+                        <li>Aula 01 - Introdução</li>
+                        <li>Aula 02 - Seletores</li>
+                        <li>Aula 03 - Propriedades de texto</li>
+                        <li>Aula 04 - Box Model</li>
+                    </ul>
+                </details>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
