--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         <li>Aula 04 - Box Model</li>
                     </ul>
                 </details>
-                
+
                 <details>
                     <summary>
                         <h5>Módulo 01 - Introdução</h5>
@@ -359,5 +359,34 @@
             </div>
         </div>
     </section>
+
+    <section  class="pratica">
+        <div class="container">
+            <div class="top">
+                <div class="text">
+                    <div class="title">Prática</div>
+                    <h2>Crie projetos reais</h2>
+                </div>
+                <div class="arrows">
+                    <div class="icon">
+                        <img src="img/icons/icon_left.svg" alt="">
+                    </div>
+                    <div class="icon">
+                        <img src="img/icons/icon_right.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="screen nubank">
+                    <img src="img/project_nubank.png" alt="">
+                </div>
+                <div class="screen challenge">
+                    <img src="img/project_challenge02.png" alt="">
+                </div>
+            </div>
+            <div class="line"></div>
+        </div>
+    </section>
+
 </body>
 </html>
