--- a/index.html
+++ b/index.html
@@ -388,5 +388,87 @@
         </div>
     </section>
 
+    <section class="tecnologias">
+        <div class="top">
+            <div class="title">Tecnologias</div>
+            <h2>Tecnologias que ensinamos no treinamento</h2>
+        </div>
+        <div class="logos-top">
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
+        </div>
+        <div class="logos-bottom">
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon"><img src="img/logos/reactjs.svg" alt=""></div>
+                <div class="text">
+                    <h5>ReactJs</h5>
+                    <p>Uma biblioteca JavaScript que é usada para construir interfaces de usuário</p>
+                </div>
+            </div>
+        </div>
+        <a href="#"><button class="btn">Garantir minha vaga</button></a>
+    </section>
+
 </body>
 </html>
