--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <a href="#"><img src="img/logo.svg" alt=""></a>
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Comunidade</a></li>
-                    <li><a href="">Blog</a></li>
+                    <li><a href="https://devboost.com.br/">Home</a></li>
+                    <li><a href="http://bit.ly/3Xt0qQ9" target="_blank">Comunidade</a></li>
+                    <li><a href="https://blog.devboost.com.br/">Blog</a></li>
                 </ul>
                 <div class="btns">
-                    <a href=""><button class="btn">Fazer matrícula</button></a>
-                    <a href=""><button class="btn btn-outline-primary">Login</button></a>
+                    <a href="https://pay.kiwify.com.br/QTnxhp2"><button class="btn">Fazer matrícula</button></a>
+                    <a href="https://dashboard.kiwify.com.br/login"><button class="btn btn-outline-primary">Login</button></a>
                 </div>
             </nav>
         </div>
@@ -34,7 +34,7 @@
                 </div>
                 <h1>Dê start na sua jornada profissional e faça sua carreira evoluir na programação</h1>
                 <p>Trilha de conhecimento completa, focada em atender as diferentes demandas do mercado.</p>
-                <a href="#"><button class="btn">Garantir minha vaga</button></a>
+                <a href="https://pay.kiwify.com.br/QTnxhp2"><button class="btn">Garantir minha vaga</button></a>
             </div>
         </div>
     </section>
@@ -187,7 +187,7 @@
                 <div class="text">
                     <div class="title"><img src="img/icons/icon_rocket.png" alt="">Mercado em alta</div>
                     <h2>Entre na área mais promissora da atualidade, que está em constante expansão com novas oportunidades surgindo a cada dia.</h2>
-                    <a href="#"><button class="btn">Garantir minha vaga</button></a>
+                    <a href="https://pay.kiwify.com.br/QTnxhp2"><button class="btn">Garantir minha vaga</button></a>
                 </div>
                 <p>Se você procura por uma carreira promissora e cheia de oportunidades, junte-se a um dos nichos mais aquecidos do mercado, com possibilidades surgindo a todo momento. E para isso a Devboost oferece um ambiente de aprendizado imersivo, orientado por especialistas no assunto, para prepará-lo para essas oportunidades. Venha fazer parte da Devboost e comece sua jornada para se tornar um programador de destaque.</p>
             </div>
@@ -230,7 +230,7 @@
                 <div class="title">Metodologia</div>
                 <h2>Aprendemos melhor fazendo</h2>
                 <p>A Devboost adota uma metodologia de aprendizado altamente prática e voltada para ação.</p>
-                <a href="#"><button class="btn">Garantir minha vaga</button></a>
+                <a href="https://pay.kiwify.com.br/QTnxhp2"><button class="btn">Garantir minha vaga</button></a>
             </div>
             <div class="content-right">
                 <ul>
@@ -467,8 +467,28 @@
                 </div>
             </div>
         </div>
-        <a href="#"><button class="btn">Garantir minha vaga</button></a>
+        <a href="https://pay.kiwify.com.br/QTnxhp2"><button class="btn">Garantir minha vaga</button></a>
     </section>
 
+    <div class="gratuito">
+        <div class="container">
+            <div class="text">
+                <div class="title"><img src="img/icons/icon_flame.png" alt="">Conteúdo gratuito</div>
+                <h2>Confira os conteúdos gratuitos que produzimos diariamente!</h2>
+                <p>Conteúdos diariamente no Youtube e Instagram com projetos práticos e dicas valiosas para impulsionar sua carreira, além de tirar as dúvidas dos nossos seguidores com o objetivo de ajudá-los a se tornarem programadores de destaque.</p>
+                <div class="social">
+                    <a href="https://www.youtube.com/@dev_boost" target="_blank" class="icon">
+                        <img src="img/icons/icon_youtube.svg" alt="">
+                    </a>
+                    <a href="https://www.instagram.com/dev_boost" target="_blank" class="icon">
+                        <img src="img/icons/icon_instagram.svg" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="image">
+                <img src="img/devices.png" alt="">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
