--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
     <title>DevBoost | Escola de programação e Tecnologia</title>
 </head>
 <body>
@@ -472,23 +473,92 @@
 
     <div class="gratuito">
         <div class="container">
-            <div class="text">
-                <div class="title"><img src="img/icons/icon_flame.png" alt="">Conteúdo gratuito</div>
-                <h2>Confira os conteúdos gratuitos que produzimos diariamente!</h2>
-                <p>Conteúdos diariamente no Youtube e Instagram com projetos práticos e dicas valiosas para impulsionar sua carreira, além de tirar as dúvidas dos nossos seguidores com o objetivo de ajudá-los a se tornarem programadores de destaque.</p>
-                <div class="social">
-                    <a href="https://www.youtube.com/@dev_boost" target="_blank" class="icon">
-                        <img src="img/icons/icon_youtube.svg" alt="">
-                    </a>
-                    <a href="https://www.instagram.com/dev_boost" target="_blank" class="icon">
-                        <img src="img/icons/icon_instagram.svg" alt="">
-                    </a>
+            <div class="content">
+                <div class="text">
+                    <div class="title"><img src="img/icons/icon_flame.png" alt="">Conteúdo gratuito</div>
+                    <h2>Confira os conteúdos gratuitos que produzimos diariamente!</h2>
+                    <p>Conteúdos diariamente no Youtube e Instagram com projetos práticos e dicas valiosas para impulsionar sua carreira, além de tirar as dúvidas dos nossos seguidores com o objetivo de ajudá-los a se tornarem programadores de destaque.</p>
+                    <div class="social">
+                        <a href="https://www.youtube.com/@dev_boost" target="_blank" class="icon">
+                            <img src="img/icons/icon_youtube.svg" alt="">
+                        </a>
+                        <a href="https://www.instagram.com/dev_boost" target="_blank" class="icon">
+                            <img src="img/icons/icon_instagram.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="image">
+                    <img src="img/devices.png" alt="">
                 </div>
             </div>
-            <div class="image">
-                <img src="img/devices.png" alt="">
+            <div class="line"></div>
+        </div>
+    </div>
+
+    <div class="empresas">
+        <div class="container">
+            <div class="top">
+                <div class="title">Alunos DevBoost</div>
+                <h2>Onde trabalham os alunos  que estudaram na DevBoost</h2>
+            </div>
+            <div class="bottom">
+                <div class="logo">
+                    <img src="img/logos/meta.png" alt="">
+                </div>
+                <div class="logo">
+                    <img src="img/logos/toro.png" alt="">
+                </div>
+                <div class="logo">
+                    <img src="img/logos/meta.png" alt="">
+                </div>
+                <div class="logo">
+                    <img src="img/logos/toro.png" alt="">
+                </div>
+                <div class="logo">
+                    <img src="img/logos/meta.png" alt="">
+                </div>
             </div>
         </div>
     </div>
+    
+    <section class="preco">
+        <div class="container">
+            <div class="content-preco">
+                <div class="content-left">
+                    <div class="box">
+                        <img src="img/icons/icon_security.svg" alt="">
+                        <h5>7 dias de garantia</h5>
+                        <p>Você tem 7 dias para experimentar nosso curso com total garantia.</p>
+                    </div>
+                    <div class="box">
+                        <img src="img/icons/icon_pricelifetime.svg" alt="">
+                        <h5>Acesso vitalício</h5>
+                        <p>Tenha acesso ilimitado ao curso para sempre. Aprenda no seu tempo, no seu ritmo.</p>
+                    </div>
+                    <div class="box">
+                        <img src="img/icons/icon_priceupdate.svg" alt="">
+                        <h5>Receba atualizações</h5>
+                        <p>Compre agora e tenha acesso a todas as atualizações do curso gratuitamente, para sempre estar atualizado com o mercado.</p>
+                    </div>
+                </div>
+                <div class="content-right">
+                    <div class="vagas">
+                        <img src="img/icons/icon_ray.svg" alt="">
+                        <p>Vagas abertas!</p>
+                    </div>
+                    <h2>Dê o primeiro passo e evolua sua carreira na programação</h2>
+                    <div class="box-preco">
+                        <p>Apenas</p>
+                        <div class="numeros">
+                            <div class="real">R$</div>
+                            <div class="valor">297<span>,00</span></div>
+                        </div>
+                        <p>Ou 12x de R$ 28,82</p>
+                    </div>
+                    <a href="https://pay.kiwify.com.br/QTnxhp2"><button class="btn">Garantir minha vaga</button></a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
