--- a/index.html
+++ b/index.html
@@ -560,5 +560,58 @@
             </div>
         </div>
     </section>
+
+    <section class="faq">
+        <div class="container">
+            <div class="content-left">
+                <div class="text">
+                    <div class="title">Faq</div>
+                    <h2>Perguntas Frequentes</h2>
+                    <p>Ainda está com alguma dúvida? Chama nossa equipe no WhatsApp!</p>
+                </div>
+                <a href="https://api.whatsapp.com/send?phone=5585992364455&text=Ol%C3%A1%2C%20tenho%20d%C3%BAvida%20sobre"><button class="btn"><i class="fa-brands fa-whatsapp fa-lg"></i>Whatsapp</button></a>
+            </div>
+            <div class="content-right">
+                <details>
+                    <summary>
+                        <h5>Módulo 01 - Introdução</h5>
+                        <img src="img/icons/icon_arrow.svg" alt="">
+                    </summary>
+                    <ul>
+                        <li>Aula 01 - Introdução</li>
+                        <li>Aula 02 - Seletores</li>
+                        <li>Aula 03 - Propriedades de texto</li>
+                        <li>Aula 04 - Box Model</li>
+                    </ul>
+                </details>
+
+                <details>
+                    <summary>
+                        <h5>Módulo 01 - Introdução</h5>
+                        <img src="img/icons/icon_arrow.svg" alt="">
+                    </summary>
+                    <ul>
+                        <li>Aula 01 - Introdução</li>
+                        <li>Aula 02 - Seletores</li>
+                        <li>Aula 03 - Propriedades de texto</li>
+                        <li>Aula 04 - Box Model</li>
+                    </ul>
+                </details>
+
+                <details>
+                    <summary>
+                        <h5>Módulo 01 - Introdução</h5>
+                        <img src="img/icons/icon_arrow.svg" alt="">
+                    </summary>
+                    <ul>
+                        <li>Aula 01 - Introdução</li>
+                        <li>Aula 02 - Seletores</li>
+                        <li>Aula 03 - Propriedades de texto</li>
+                        <li>Aula 04 - Box Model</li>
+                    </ul>
+                </details>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
