--- a/index.html
+++ b/index.html
@@ -613,5 +613,54 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="top">
+                <div class="logo">
+                    <a href=""><img src="img/logo.svg" alt=""></a>
+                    <div class="linha"></div>
+                    <p>Aqui você dá um boost na sua carreira.</p>
+                </div>
+                <div class="menu">
+                    <h6>Menu</h6>
+                    <ul>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Comunidade</a></li>
+                        <li><a href="">Desafios</a></li>
+                    </ul>
+                </div>
+                <div class="contatos">
+                    <h6>Fale conosco</h6>
+                    <ul>
+                        <li><a href=""><i class="fa-brands fa-whatsapp fa-lg"></i>Whatsapp</a></li>
+                        <li><a href=""><i class="fa-regular fa-envelope fa-lg"></i>Suporte@devboost.com.br</a></li>
+                    </ul>
+                </div>
+                <div class="transparencia">
+                    <h6>Transparência</h6>
+                    <ul>
+                        <li><a href="">Termos de uso</a></li>
+                        <li><a href="">Política de privacidade</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="bottom">
+                <p>2023 © DevBoost - Todos os direitos reservados.</p>
+                <div class="social">
+                    <ul>
+                        <li><a href=""><i class="fa-brands fa-youtube fa-lg"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram fa-lg"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-facebook-f fa-lg"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-discord fa-lg"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-spotify fa-lg"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-twitter fa-lg"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-linkedin-in fa-lg"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
