--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </button>
                     <div class="box">
                         <h2>+300</h2>
-                        <p>Alunos no mercado<br>de trabalho</p>
+                        <p>Alunos no mercado de trabalho</p>
                     </div>
                 </div>
             </div>
@@ -195,24 +195,24 @@
             <div class="bottom">
                 <div class="text">
                     <p>Ganhe ótimos salários trabalhando como dev</p>
-                    <p>* valores com base no site glassdoor.com.br</p>
+                    <p class="aviso">* valores com base no site glassdoor.com.br</p>
                 </div>
                 <div class="items">
-                    <div class="card">
+                    <div class="card jr">
                         <div class="niveis">
                             <h3>Junior</h3>
                             <p>Iniciante na área, até 1 ano de experiência</p>
                         </div>
                         <div class="salario">2-4k</div>
                     </div>
-                    <div class="card">
+                    <div class="card pl">
                         <div class="niveis">
                             <h3>Pleno</h3>
                             <p>Atua há algum tempo no mercado</p>
                         </div>
                         <div class="salario">6-8k</div>
                     </div>
-                    <div class="card">
+                    <div class="card sr">
                         <div class="niveis">
                             <h3>Sênior</h3>
                             <p>Profissional com muita experiência</p>
