--- a/index.html
+++ b/index.html
@@ -275,19 +275,19 @@
                 <h2>O que falam nossos alunos</h2>
             </div>
             <div class="items">
-                <div class="card">
+                <div class="card d1">
                     <img src="img/icons/icon_quotes.svg" alt="" class="icon">
                     <p>Lorem ipsum dolor sit amet consectetur. Amet ac viverra tortor ut a potenti faucibus in. Sed morbi et massa faucibus. In condimentum nisl tincidunt morbi cras amet sit a. Orci sit mattis at nulla est. Posuere amet amet pellentesque laoreet enim sed sed.</p>
                     <h5>Alice Costa</h5>
                     <p>Desenvolvedora <span>Front-end na Stone</span></p>
                 </div>
-                <div class="card">
+                <div class="card d2">
                     <img src="img/icons/icon_quotes.svg" alt="" class="icon">
                     <p>Lorem ipsum dolor sit amet consectetur. Amet ac viverra tortor ut a potenti faucibus in. Sed morbi et massa faucibus. In condimentum nisl tincidunt morbi cras amet sit a. Orci sit mattis at nulla est. Posuere amet amet pellentesque laoreet enim sed sed.</p>
                     <h5>Alice Costa</h5>
                     <p>Desenvolvedora <span>Front-end na Stone</span></p>
                 </div>
-                <div class="card">
+                <div class="card d3">
                     <img src="img/icons/icon_quotes.svg" alt="" class="icon">
                     <p>Lorem ipsum dolor sit amet consectetur. Amet ac viverra tortor ut a potenti faucibus in. Sed morbi et massa faucibus. In condimentum nisl tincidunt morbi cras amet sit a. Orci sit mattis at nulla est. Posuere amet amet pellentesque laoreet enim sed sed.</p>
                     <h5>Alice Costa</h5>
