--- a/index.html
+++ b/index.html
@@ -674,6 +674,6 @@
     </footer>
 
     <script src="node_modules/swiper/swiper-bundle.min.js"></script>
-    <script src="js/carrossel.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
