--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.min.css">
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
     <title>DevBoost | Escola de programação e Tecnologia</title>
 </head>
 <body>
@@ -97,6 +98,10 @@
                             <p>Assista o vídeo para entender como funciona</p>
                         </div>
                     </button>
+                    <div class="modal">
+                        <span class="modal-fechar">&times;</span>
+                        <iframe class="modal-video" src="https://www.youtube.com/embed/YIM6WyjkCrg" frameborder="0" allowfullscreen></iframe>
+                    </div>
                     <div class="box">
                         <h2>+300</h2>
                         <p>Alunos no mercado de trabalho</p>
